--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,13 @@
     <title>Flexbox</title>
 </head>
 <body>
-    <main class="cards">
+    <div class="flex-mama">
+    <div class="banner">
+        <h1 class="banner-titulo">HOLI BOLI</h1>
+    </div>
+
+
+    <div class="cards">
         <article class="card">
             <h2>Titulares</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit harum maiores facilis consequatur nulla tempore architecto? Inventore vel eligendi deserunt molestiae dicta nam, temporibus veniam earum eos cupiditate optio odio!
@@ -40,7 +46,8 @@
             <p>Cati temporibus quas modi fugiat nobis magni soluta.</p>
         </article>
         
-    </main>
+    </div>
+</div>
    
     
 </body>
